blockml/test/errors/02_field/e299/e299.view
view: e299
table: 1
fields:
  - measure: m        
    sql: 1
    type: percentile_by_key
    sql_key: 1

